10/31/2004
	- Add partial IPv6 support to the ReverseMap class.
	  (based on a patch from Th Kuhne)

7/7/2004
	- Implement the $GENERATE master file directive.

6/28/2004
	- Canonicalizing a name created with the Name(Name src, int n)
	  constructor caused an exception.
	  (based on a patch from Nigel Tamplin <nigel@metica.com>)
	- Concatenating names caused an exception when the prefix was created
	  with the Name(Name src, int n) constructor.
	  (reported by Nigel Tamplin <nigel@metica.com>)

6/22/2004
	- The DNSSEC digesting code shouldn't throw ClassCastExceptions.
	  (reported by Mike StJohns <Mike.StJohns@nominum.com>)
	- The label count in a generated SIG/RRSIG record was off by one.
	  (Mike StJohns <Mike.StJohns@nominum.com>)

6/8/2004
	- Rcode 4 is NOTIMP, not NOTIMPL.

6/5/2004
	- Fixes to LOCRecord.

6/3/2004
	- 1.6.4 released.

5/26/2004
	- Properly handle text mnemonics in KEY records.
	- Add support for the APL record type.

5/25/2004
	- Fix a bug where parsing the text format of an NSEC record
	  incorrectly parsed one token too many.

5/18/2004
	- 1.6.3 released.

5/11/2004
	- Don't store the number of labels in a Name in a byte, as the maximum
	  value (128) cannot be stored in a byte.

5/9/2004
	- Add support for options within an OPTRecord (loosely based on
	  a patch from Madhu Siddalingaiah <madhu@madhu.com>)

4/18/2004
	- Add support for the SSHFP record type.
	- Fix a bug in the zone code which would cause record lookups to fail.

4/10/2004
	- When parsing paster files, handle the fact that class and ttl may
	  be in either order.

4/8/2004
	- The opcode field in the DNS header was incorrectly parsed; this
	  would affect messages with opcodes other than QUERY.
	  (Madhu Siddalingaiah <madhu@madhu.com>)

3/20/2004
	- 1.6.2 released.
	- Lookups could return "referral" instead of "host not found" in some
	  cases.

3/18/2004
	- Fix NullPointerExceptions caused by bad empty Record handling.